Added and updated files

--- a/ssh-session.yaml
+++ b/ssh-session.yaml
@@ -1,4 +1,4 @@
-- hosts: servers 
+- hosts: all 
   tasks:
   - name: "connect via ssh"
     shell: for i in $(cat servers); do ssh ansible@$i; done
