--- a/awx-install.yml
+++ b/awx-install.yml
@@ -2,20 +2,29 @@
 - name: Install AWX
   hosts: localhost
   become: yes
+  vars:
+    awx_namespace: awx
+
   tasks:
     - name: Download Kustomize with curl
-      shell: curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh" | bash
+      ansible.builtin.shell:
+        cmd: curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh" | bash
+        creates: /usr/local/bin/kustomize
 
     - name: Move Kustomize to the /usr/local/bin directory
-      shell: mv kustomize /usr/local/bin
+      ansible.builtin.shell:
+        cmd: mv kustomize /usr/local/bin
+      args:
+        creates: /usr/local/bin/kustomize
 
-    - name: Create namespace awx
-      shell: kubectl create namespace awx
+    - name: Ensure namespace {{ awx_namespace }} exists
+      ansible.builtin.shell:
+        cmd: kubectl create namespace {{ awx_namespace }} --dry-run=client -o yaml | kubectl apply -f -
 
-    - name: Create awx.yaml 
-      shell:
-        cmd: |
-          cat > awx.yaml << EOF
+    - name: Generate AWX resource file
+      ansible.builtin.copy:
+        dest: "./awx.yaml"
+        content: |
           ---
           apiVersion: awx.ansible.com/v1beta1
           kind: AWX
@@ -23,31 +32,29 @@
             name: awx
           spec:
             service_type: nodeport
-            nodeport_port: 30060
-          EOF
-      args:
-        executable: /bin/bash
+            nodeport_port: 30060         
+
+    - name: Fetch latest release tag of AWX Operator
+      ansible.builtin.shell:
+        cmd: curl -s https://api.github.com/repos/ansible/awx-operator/releases/latest | grep tag_name | cut -d '"' -f 4
+      register: release_tag
+      changed_when: false
 
     - name: Create kustomization.yaml
-      shell:
-        cmd: |
-          cat > kustomization.yaml << EOF
+      ansible.builtin.copy:
+        dest: "./kustomization.yaml"
+        content: |
           ---
           apiVersion: kustomize.config.k8s.io/v1beta1
           kind: Kustomization
           resources:
-            # Find the latest tag here: https://github.com/ansible/awx-operator/releases
-            - github.com/ansible/awx-operator/config/default?ref=2.8.0
+            - github.com/ansible/awx-operator/config/default?ref={{ release_tag.stdout }}
             - awx.yaml
-          # Set the image tags to match the git version from above
           images:
             - name: quay.io/ansible/awx-operator
-              newTag: 2.8.0
-          # Specify a custom namespace in which to install AWX
-          namespace: awx
-          EOF
-      args:
-        executable: /bin/bash
+              newTag: {{ release_tag.stdout }}
+          namespace: {{ awx_namespace }}          
 
-    - name: Kick off the building of the ansible awx
-      shell: kustomize build . | kubectl apply -f - 
+    - name: Apply Kustomize configuration
+      ansible.builtin.shell:
+        cmd: kustomize build . | kubectl apply -f -
